# tilagup

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml  up.py
design/: AGENTS.md  rationale.md  zones.md
docs/: AGENTS.md  agents.md  getting-started.md  run-archive.md  zones.md
presets/: AGENTS.md  README.md  _lib.sh  cartoon_ink_dry.sh  cartoon_ink_upscale.sh  default_dry.sh  default_upscale.sh  grit_dry.sh  grit_hot_dry.sh  grit_hot_upscale.sh  grit_upscale.sh  photo_soft_dry.sh  photo_soft_upscale.sh  smooth_dry.sh  smooth_upscale.sh  stub_smoke_dry.sh  stub_smoke_upscale.sh
scripts/: AGENTS.md
src/: AGENTS.md
src/tilagup/: AGENTS.md  __init__.py  archive.py  cli.py  clip_fit.py  job_status.py  log.py  pipeline.py  prompts_lib.py  texture.py  tiles.py  timing_stats.py  upscale_fastsd.py  upscale_worker.py
src/tilagup/agents/: AGENTS.md  __init__.py  agy_agent.py  base.py  grok_agent.py  roster.py  stub_agent.py
tests/: AGENTS.md  test_archive.py  test_clean_prompt.py  test_clip_fit.py  test_pipeline_stub.py  test_stub_agent.py  test_texture.py  test_tiles.py  test_timing_stats.py
